// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: kiorga/datamodel/task.proto
syntax = "proto3";

package kiorga.datamodel;

import "google/protobuf/timestamp.proto";

// Enum zur Definition des Bearbeitungsstatus einer Aufgabe.
enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_FAILED = 4;
}

// Enum zur Definition der Priorität einer Aufgabe.
enum TaskPriority {
  TASK_PRIORITY_UNSPECIFIED = 0;
  TASK_PRIORITY_URGENT = 1;
  TASK_PRIORITY_HIGH = 2;
  TASK_PRIORITY_MEDIUM = 3;
  TASK_PRIORITY_LOW = 4;
  TASK_PRIORITY_OPTIONAL = 5;
}

// Das zentrale Objekt zur Steuerung und Verfolgung von Arbeit in der KI-Organisation.
//TODO: Refactoring aller Task-Attribute-Namen von snake_case in camelCase, um Konsistenz
// zu gewährleisten, bspw. "task_id" zu "taskId", "created_at" zu "createdAt" usw. (Grund: Wenn json_format.MessageToJson ein Protobuf-Objekt in JSON umwandelt, wandelt es Feldnamen wie assigned_to_agent_id automatisch in assignedToAgentId um)
message Task {
  // Die global eindeutige ID der Aufgabe (z.B. eine UUID).
  string taskId = 1;

  // Kurzer, menschenlesbarer Titel der Aufgabe, z.B. für Listenansichten.
  string title = 2;

  // Detaillierte Beschreibung der Arbeitsanweisung für den ausführenden Agenten.
  string description = 3;

  // Der aktuelle Bearbeitungsstatus der Aufgabe.
  TaskStatus taskStatus = 4;

  // Die Priorität der Aufgabe zur Steuerung der Abarbeitungsreihenfolge.
  TaskPriority taskPriority = 5;

  // Die ID des Agenten, der für die Ausführung der Aufgabe verantwortlich ist.
  string assignedToAgentId = 6;

  // Die ID des Agenten, der die Aufgabe ursprünglich erstellt hat.
  string creatorAgentId = 7;

  // Zeitstempel der Erstellung der Aufgabe.
  google.protobuf.Timestamp createdAt = 8;

  // Zeitstempel der letzten Aktualisierung. Wird bei jeder Änderung aktualisiert.
  google.protobuf.Timestamp updatedAt = 9;

  // Eine Liste von 'task_id's, die abgeschlossen sein müssen, bevor diese Aufgabe starten kann.
  repeated string dependencies = 10;

  // Schlüssel-Wert-Paare für Verweise auf Input-Daten (z.B. Pfade in Cloud Storage).
  map<string, string> inputDataReferences = 11;

  // Schlüssel-Wert-Paare für Verweise auf Output-Daten.
  map<string, string> outputDataReferences = 12;

  // Textuelle Beschreibung der Erfolgskriterien ("Definition of Done").
  string successCriteriaMetrics = 13;

  // Optional: Die ID der übergeordneten Aufgabe zur Abbildung von Hierarchien.
  string parentTaskId = 14;

  // Optional: Das Fälligkeitsdatum für die Aufgabe, um die Priorisierung zu unterstützen.
  google.protobuf.Timestamp dueDate = 15;

  // Wenn 'true', erfordert die Aufgabe menschliche Freigaben an definierten Punkten.
  bool coPilotMode = 16;
}